
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int utf8proc_bool ;


 int UTF8PROC_BOUNDCLASS_CONTROL ;
 int UTF8PROC_BOUNDCLASS_CR ;
 int UTF8PROC_BOUNDCLASS_EXTEND ;
 int UTF8PROC_BOUNDCLASS_E_BASE ;
 int UTF8PROC_BOUNDCLASS_E_BASE_GAZ ;
 int UTF8PROC_BOUNDCLASS_E_MODIFIER ;
 int UTF8PROC_BOUNDCLASS_GLUE_AFTER_ZWJ ;
 int UTF8PROC_BOUNDCLASS_L ;
 int UTF8PROC_BOUNDCLASS_LF ;
 int UTF8PROC_BOUNDCLASS_LV ;
 int UTF8PROC_BOUNDCLASS_LVT ;
 int UTF8PROC_BOUNDCLASS_PREPEND ;
 int UTF8PROC_BOUNDCLASS_REGIONAL_INDICATOR ;
 int UTF8PROC_BOUNDCLASS_SPACINGMARK ;
 int UTF8PROC_BOUNDCLASS_START ;
 int UTF8PROC_BOUNDCLASS_T ;
 int UTF8PROC_BOUNDCLASS_V ;
 int UTF8PROC_BOUNDCLASS_ZWJ ;

__attribute__((used)) static utf8proc_bool grapheme_break_simple(int lbc, int tbc) {
  return
    (lbc == UTF8PROC_BOUNDCLASS_START) ? 1 :
    (lbc == UTF8PROC_BOUNDCLASS_CR &&
     tbc == UTF8PROC_BOUNDCLASS_LF) ? 0 :
    (lbc >= UTF8PROC_BOUNDCLASS_CR && lbc <= UTF8PROC_BOUNDCLASS_CONTROL) ? 1 :
    (tbc >= UTF8PROC_BOUNDCLASS_CR && tbc <= UTF8PROC_BOUNDCLASS_CONTROL) ? 1 :
    (lbc == UTF8PROC_BOUNDCLASS_L &&
     (tbc == UTF8PROC_BOUNDCLASS_L ||
      tbc == UTF8PROC_BOUNDCLASS_V ||
      tbc == UTF8PROC_BOUNDCLASS_LV ||
      tbc == UTF8PROC_BOUNDCLASS_LVT)) ? 0 :
    ((lbc == UTF8PROC_BOUNDCLASS_LV ||
      lbc == UTF8PROC_BOUNDCLASS_V) &&
     (tbc == UTF8PROC_BOUNDCLASS_V ||
      tbc == UTF8PROC_BOUNDCLASS_T)) ? 0 :
    ((lbc == UTF8PROC_BOUNDCLASS_LVT ||
      lbc == UTF8PROC_BOUNDCLASS_T) &&
     tbc == UTF8PROC_BOUNDCLASS_T) ? 0 :
    (tbc == UTF8PROC_BOUNDCLASS_EXTEND ||
     tbc == UTF8PROC_BOUNDCLASS_ZWJ ||
     tbc == UTF8PROC_BOUNDCLASS_SPACINGMARK ||
     lbc == UTF8PROC_BOUNDCLASS_PREPEND) ? 0 :
    ((lbc == UTF8PROC_BOUNDCLASS_E_BASE ||
      lbc == UTF8PROC_BOUNDCLASS_E_BASE_GAZ) &&
     tbc == UTF8PROC_BOUNDCLASS_E_MODIFIER) ? 0 :
    (lbc == UTF8PROC_BOUNDCLASS_ZWJ &&
     (tbc == UTF8PROC_BOUNDCLASS_GLUE_AFTER_ZWJ ||
      tbc == UTF8PROC_BOUNDCLASS_E_BASE_GAZ)) ? 0 :
    (lbc == UTF8PROC_BOUNDCLASS_REGIONAL_INDICATOR &&
     tbc == UTF8PROC_BOUNDCLASS_REGIONAL_INDICATOR) ? 0 :
    1;
}
